fixed: ticks height changing in horizontal slider on small window sizes

--- a/src/widget/analog-scale/analog-scalepicker.scss
+++ b/src/widget/analog-scale/analog-scalepicker.scss
@@ -25,8 +25,7 @@ $min-height: 800px;
         .scale__ticks {
             width: 100%;
             height: 50%;
-            // why not 25%?
-            margin-top: 18%;
+            margin-top: 7px;
             background-image: linear-gradient(270deg, $tick-color 1px, transparent 0px);
             background-repeat: repeat-x;
             background-origin: border-box;
